# rustyvisor

./: .gitignore  .travis.yml  CHANGES.md  Cargo.toml  LICENSE  Makefile  README.md  Vagrantfile  Xargo.toml  build.rs  build.sh  prep.sh  x86_64-linux.json
.cargo/: config
dmesg_logger/: Cargo.toml
dmesg_logger/src/: lib.rs
hypervisor/: Cargo.toml
hypervisor/src/: cli.rs  cpu.rs  debug.rs  hypercall.rs  hypercall_handler.rs  interrupt_controller.rs  interrupts.rs  isr.rs  lib.rs  msr.rs  panic.rs  register_state.rs  runtime.rs  segmentation.rs  vcpu.rs  vmcs.rs  vmcs_dump.rs  vmcs_fields.rs  vmexit_handlers.rs  vmexit_reasons.rs  vmx.rs
hypervisor_abi/: Cargo.toml
hypervisor_abi/src/: lib.rs
libs/allocator/: Cargo.toml
libs/allocator/src/: lib.rs  serial_logger_lite.rs
linux/: Cargo.toml  Makefile  build.sh
linux-old/: Vagrantfile  dmesg_logger.rs  linux.c  linux_linker.lds  linux_module.md  x86_64-linux.json
linux/src/: host_entrypoint.S  lib.rs  linux_module.c
loader/: linux.c
pcuart/: Cargo.toml
pcuart/src/: lib.rs  logger.rs
rustyvctl/: Cargo.toml  old.build.rs
rustyvctl/.cargo/: config
rustyvctl/src/: main.rs
scripts/: bochs_deploy.sh  ci-install.sh  ci.sh  deploy_wsl.ps1  git_pre_commit_hook.sh  make_uefi_test_fs.sh  printer.sh  startup.nsh
src/: allocator.rs  cli.rs  cpu.rs  dispatch_table.rs  dmesg_logger.rs  gdt.rs  hash_map.rs  interrupts.S  interrupts.rs  isr.rs  lib.rs  linux.rs  os.rs  paging.rs  runtime.rs  segmentation.rs  serial_logger.rs  vmx.rs
src/interrupts/: cli.rs  mod.rs
src/vmx/: mod.rs
uefi/: Cargo.toml  bochsrc.txt  build.rs  build.sh
uefi/.cargo/: config
uefi/src/: host_entrypoint.S  isr.S  main.rs
