[package]
name = "rustyvisor"
version = "0.1.0"
authors = ["Ian Kronquist <iankronquist@gmail.com>"]


[dependencies]
spin = { version = "0.4" }
allocator = { path = "libs/allocator" }
lazy_static = { features = ["spin_no_std"], version = "0.2" }
log = { default-features = false, version = "0.3" }


[features]
runtime_tests = []

[lib]
crate_type = ["staticlib"]
