[package]
name = "rustyvisor"
version = "0.1.0"
authors = ["Ian Kronquist <iankronquist@gmail.com>"]
build = "build.rs"


[dependencies]
spin = { version = "0.4" }
log = { default-features = false, version = "0.3" }


[features]
runtime_tests = []
dmesg_logger = []

[lib]
crate_type = ["staticlib"]
