[package]
name = "hypervisor"
version = "0.1.0"
authors = ["Ian Kronquist <iankronquist@gmail.com>"]
edition = "2018"
#build = "build.rs"


[dependencies]
spin = { version = "0.9" }
log = { default-features = false, version = "0.4" }
pcuart = { path= "../pcuart"}
x86 = "0.39.0"

[features]
runtime_tests = []
dmesg_logger = []

[lib]
#crate_type = ["staticlib"]
