[package]
name = "uefi"
version = "0.1.0"
authors = ["Ian Kronquist <iankronquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypervisor = { path = "../hypervisor" }
uefi = "0.11.0"
uefi-services = "0.8.0"

[build-dependencies]
cc = "1.0.25"